--- a/aws/cloudformation/bootstrap_standalone.sh.erb
+++ b/aws/cloudformation/bootstrap_standalone.sh.erb
@@ -18,7 +18,7 @@ ENVIRONMENT=<%=environment%>
 # Initialize blocks from the snapshot-created EBS volume.
 # Ref: http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ebs-initialize.html
 # Using `tar` instead of `dd`/`fio` to only initialize blocks currently used by the filesystem.
-time tar cf /dev/null /usr /var /opt /lib /home &
+time tar cf /dev/null /home /usr /var /opt /lib &
 
 # Bootstrap prerequisites
 apt-get update
@@ -78,7 +78,7 @@ JSON
 rm -f /etc/init.d/{dashboard,pegasus}
 
 # Workaround to delete any locally-modified files
-(cd /home/ubuntu/${ENVIRONMENT} && git reset --hard)
+(cd /home/ubuntu/${ENVIRONMENT} && git reset --hard &)
 
 OPTIONS="<%=local_mode ? '-z' : ''%> -b ${BRANCH} -n ${NODE_NAME}"
 sudo -u ubuntu bash -c "aws s3 cp s3://${S3_BUCKET}/chef/bootstrap-${STACK}.sh - | sudo bash -s -- ${OPTIONS}"
