--- a/aws/cloudformation/bootstrap_standalone.sh.erb
+++ b/aws/cloudformation/bootstrap_standalone.sh.erb
@@ -78,7 +78,7 @@ JSON
 rm -f /etc/init.d/{dashboard,pegasus}
 
 # Workaround to delete any locally-modified files
-(cd /home/ubuntu/${ENVIRONMENT} && git reset --hard &)
+sudo -u ubuntu bash -c "cd /home/ubuntu/${ENVIRONMENT} && git reset --hard &"
 
 OPTIONS="<%=local_mode ? '-z' : ''%> -b ${BRANCH} -n ${NODE_NAME}"
 sudo -u ubuntu bash -c "aws s3 cp s3://${S3_BUCKET}/chef/bootstrap-${STACK}.sh - | sudo bash -s -- ${OPTIONS}"
