--- a/aws/cloudformation/vpc.yml.erb
+++ b/aws/cloudformation/vpc.yml.erb
@@ -186,6 +186,21 @@ Resources:
     Properties:
       DBSubnetGroupDescription: Public Database Subnet Group
       SubnetIds: <%=azs.map{|az| {Ref: "PublicSubnet#{az}"}}.to_json%>
+  RedshiftSubnetGroup:
+    Type: AWS::Redshift::ClusterSubnetGroup
+    Properties:
+      DBSubnetGroupDescription: Redshift Public Subnet Group
+      SubnetIds: <%=azs.map{|az| {Ref: "PublicSubnet#{az}"}}.to_json%>
+  RedshiftSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Inbound Redshift connections from public Internet.
+      VpcId: {Ref: VPC}
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 5439
+          ToPort: 5439
+          CidrIp: 0.0.0.0/0
 Outputs:
   VpcId:
     Description: VPC ID
@@ -205,6 +220,12 @@ Outputs:
   DBSecurityGroup:
     Description: Security group for DB
     Value: {'Fn::GetAtt': [DBSecurityGroup, GroupId]}
+  RedshiftSubnetGroup:
+    Description: Subnet group for Redshift
+    Value: {Ref: RedshiftSubnetGroup}
+  RedshiftSecurityGroup:
+    Description: Security group for Redshift
+    Value: {'Fn::GetAtt': [RedshiftSecurityGroup, GroupId]}
 <%
   availability_zones.each_with_index do |zone, i|
     az = zone[-1].upcase
