--- a/aws/cloudformation/pipeline.json.erb
+++ b/aws/cloudformation/pipeline.json.erb
@@ -60,7 +60,7 @@
       "runsOn": {
         "ref": "Ec2Instance"
       },
-      "scriptArgument": {"Fn::Join": [" ", [
+      "scriptArgument": [
         "--rds_jdbc=#{myRDSJdbcConnectStr}",
         "--rds_tbl=#{myRDSTableName}",
         "--rds_pwd=#{*myRDSPassword}",
@@ -73,7 +73,7 @@
         "--red_sort=#{myRedshiftSortKeys}",
         "--red_map=#{myRedshiftTypeConvOverrideMap}",
         "--red_ins=#{myInsertMode}"
-      ]]},
+      ],
       "id": "RedshiftTableCreateActivity",
       "type": "ShellCommandActivity"
     },
@@ -90,7 +90,7 @@
     },
     {
       "period": "1 days",
-      "startDateTime": "2016-06-22T07:30:00",
+      "startDateTime": "2016-06-23T07:30:00",
       "name": "Every 1 day",
       "id": "DefaultSchedule",
       "type": "Schedule"
@@ -263,7 +263,7 @@
     ]]},
     "*myRedshiftPassword": {"Ref": "RedshiftPassword"},
     "myRDSJdbcConnectStr": {"Fn::Join": ["", [
-      "jdbc:mysql://",{"Ref": "RDSHostname"},":",{"Ref":"RDSPort"},"/",{"Ref":"RDSDatabase"}
+      "jdbc:mysql://",{"Ref": "RDSHostname"},":",{"Ref":"RDSPort"},"/",{"Ref":"DashboardDbName"}
     ]]},
     "myInsertMode": "OVERWRITE_EXISTING",
     "myRDSRedshiftSecurityGrps": {"Fn::GetAtt": ["VPC", "FrontendSecurityGroup"]},
