--- a/aws/cloudformation/pipeline.json.erb
+++ b/aws/cloudformation/pipeline.json.erb
@@ -90,7 +90,7 @@
     },
     {
       "period": "1 days",
-      "startDateTime": "2016-06-24T07:45:00",
+      "startDateTime": "2016-06-23T07:45:00",
       "name": "Every 1 day",
       "id": "DefaultSchedule",
       "type": "Schedule"
@@ -256,14 +256,14 @@
   "values": {
     "myRedshiftUsername": {"Ref": "RedshiftUsername"},
     "myRDSUsername": {"Ref": "RDSUsername"},
-    "myS3StagingLoc": {"Fn::Join": ["", [{"Ref": "RedshiftS3"},"<%=table_name%>"]]},
+    "myS3StagingLoc": {"Fn::Join": ["/", [{"Ref": "RedshiftS3"},"<%=table_name%>"]]},
     "myRDSTableLastModifiedCol": "updated_at",
     "myRedshiftJdbcConnectStr": {"Fn::Join": ["", [
       "jdbc:redshift://",{"Fn::GetAtt": ["Tableau", "Endpoint.Address"]},":",{"Fn::GetAtt": ["Tableau", "Endpoint.Port"]},"/",{"Ref": "RedshiftDatabase"},"?tcpKeepAlive=true"
     ]]},
     "*myRedshiftPassword": {"Ref": "RedshiftPassword"},
     "myRDSJdbcConnectStr": {"Fn::Join": ["", [
-      "jdbc:mysql://",{"Ref": "RDSHostname"},":",{"Ref":"RDSPort"},"/",{"Ref":"DashboardDbName"}
+      "jdbc:mysql://",{"Ref": "RDSHostname"},":",{"Ref":"RDSPort"},"/","<%=db_name%>"
     ]]},
     "myInsertMode": "OVERWRITE_EXISTING",
     "myRDSRedshiftSecurityGrps": {"Fn::GetAtt": ["VPC", "FrontendSecurityGroup"]},
