--- a/aws/cloudformation/data.yml.erb
+++ b/aws/cloudformation/data.yml.erb
@@ -3,7 +3,7 @@ require 'cdo/aws/data_pipeline'
 require 'active_support/inflector'
 require 'active_support/core_ext/object/blank'
 
-tables_to_sync = %w(
+tables = %w(
   scripts
   followers
   stages
@@ -21,10 +21,30 @@ tables_to_sync = %w(
   level_concept_difficulties
   survey_results
   sections
-  users::id,deleted_at,created_at,updated_at,current_sign_in_at,last_sign_in_at,sign_in_count,admin,user_type,gender,birthday,locale,total_lines
-  storage_apps:pegasus
-  forms:pegasus
-)
+).map do |table|
+  {
+    name: table,
+    db: 'dashboard',
+    schema: 'dashboard'
+  }
+end.concat([
+  {
+    name: 'users',
+    db: 'dashboard',
+    schema: 'dashboard',
+    select: 'id,deleted_at,created_at,updated_at,current_sign_in_at,last_sign_in_at,sign_in_count,admin,user_type,gender,birthday,locale,total_lines'
+  },
+]).concat(%w(
+  storage_apps
+  forms
+).map do |table|
+  {
+    name: table,
+    db: 'pegasus',
+    schema: 'pegasus'
+  }
+end)
+
 -%>
 ---
 AWSTemplateFormatVersion: 2010-09-09
@@ -74,20 +94,16 @@ Resources:
       NodeType: dc1.large
       PubliclyAccessible: true
       VpcSecurityGroupIds: ['Fn::GetAtt': [VPC, RedshiftSecurityGroup]]
-<%
-tables_to_sync.each do |table_select|
-  table, pegasus, select_query = table_select.split(':')
-%>
-  RDSSync<%=table.camelize%>: <%= AWS::DataPipeline.to_cfn(
-    "rds-to-redshift-#{table}#{'-whitelisted-columns' if select_query}",
-    "Copy #{table} from RDS to Redshift",
+<% %w(dashboard pegasus).map do |app| -%>
+  RDSSync<%=app.camelize%>: <%= AWS::DataPipeline.to_cfn(
+    "rds-to-redshift-#{app}",
+    "Sync RDS-#{app} to Redshift",
     File.read(aws_dir('cloudformation', 'pipeline.json.erb')),
-    table_name: table,
-    select_query: select_query || '*',
-    db_name: pegasus.present? ? CDO.pegasus_db_name : CDO.dashboard_db_name,
+    tables: tables.select{|table| table[:db] == app},
+    db_name: app == 'pegasus' ? CDO.pegasus_db_name : CDO.dashboard_db_name,
     az: azs.first
   )%>
-<% end %>
+<% end -%>
 Outputs:
   Redshift:
     Description: Tableau endpoint
