--- a/aws/cloudformation/data.yml.erb
+++ b/aws/cloudformation/data.yml.erb
@@ -4,14 +4,14 @@ require 'active_support/inflector'
 require 'active_support/core_ext/object/blank'
 
 tables = %w(
-  scripts
-  followers
-  stages
-  script_levels
-  workshops
-  segments
-  puzzle_ratings
-  user_scripts
+#  scripts
+#  followers
+#  stages
+#  script_levels
+#  workshops
+#  segments
+#  puzzle_ratings
+#  user_scripts
   channel_tokens
   levels
   user_proficiencies
